--- a/.github/workflows/build_template_amebalite.yml
+++ b/.github/workflows/build_template_amebalite.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Use updated PATH
       env:
-        PATH: /opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin/:$PATH
+        TOOLCHAIN_PATH: /opt/rtk-toolchain/asdk-10.3.1/linux/newlib/bin
       run: |
         echo $PATH
   
