--- a/.github/workflows/check_commit_msg.yml
+++ b/.github/workflows/check_commit_msg.yml
@@ -23,9 +23,10 @@ jobs:
           echo "Commit Messages:"
           echo "$commit_messages"
 
-          if echo "$commit_messages" | grep "Change-Id:"; then
+          if echo "$commit_messages" | grep -q "Change-Id:"; then
             echo "Valid commit message"
           else
             echo "Invalid commit message!!"
+            echo "Please sun setup.sh under the sdk directory"
             exit 1
           fi
