--- a/.github/workflows/ameba_cross_build_template.yml
+++ b/.github/workflows/ameba_cross_build_template.yml
@@ -19,17 +19,17 @@ jobs:
           - os: ubuntu-latest
             shell: bash
 
+          - os: windows-latest
+            shell: cmd
+ 
+          - os: windows-latest
+            shell: powershell
+
 #          - os: macos-latest
 #            shell: bash
 
 #          - os: windows-latest
 #            shell: bash
-            
-#          - os: windows-latest
-#            shell: cmd
-
-#          - os: windows-latest
-#            shell: powershell
 
 
     steps:
@@ -89,7 +89,12 @@ jobs:
       run: |
         echo "Build Current shell is ${{ matrix.shell }}"
         cd ${{ inputs.ic_name }}_gcc_project
-        python build.py
+        if [ "${{ inputs.build_stage_name }}" == "B3" || "${{ inputs.build_stage_name }}" == "B5" ]; then 
+          python build.py -D USE_ALIYUN_URL=True
+        else
+          python build.py
+        fi
+      if: ${{ inputs.ic_name != 'amebasmart' && matrix.shell != 'windows-latest' }}
 
     - name: Post-Build Cleanup
       run: |
