--- a/.github/workflows/ameba_cross_build_template.yml
+++ b/.github/workflows/ameba_cross_build_template.yml
@@ -94,7 +94,18 @@ jobs:
         else
           python build.py
         fi
-      if: ${{ inputs.ic_name != 'amebasmart' && matrix.shell != 'windows-latest' }}
+      if: ${{ !(inputs.ic_name == 'amebasmart' && matrix.os == 'windows-latest') &&  matrix.shell != 'cmd' }}
+
+    - name: Build_cmd
+      run: |
+          echo "Build Current shell is ${{ matrix.shell }}"
+          cd ${{ inputs.ic_name }}_gcc_project
+          if "${{ inputs.build_stage_name }}" == "B3" || "${{ inputs.build_stage_name }}" == "B5" (
+            python build.py -D USE_ALIYUN_URL=True
+          ) else (
+            python build.py
+          )
+      if: ${{ !(inputs.ic_name == 'amebasmart' && matrix.os == 'windows-latest') &&  matrix.shell == 'cmd' }}
 
     - name: Post-Build Cleanup
       run: |
