--- a/.github/workflows/ameba_cross_build_template.yml
+++ b/.github/workflows/ameba_cross_build_template.yml
@@ -76,7 +76,23 @@ jobs:
         echo "ic ${{ inputs.ic_name }} "
         echo "ic ${{ inputs.build_stage_name }} "
         echo "ic ${{ github.event.inputs.build_stage_name }} "
-        BUILD_CONFIG=$(jq -r --arg ic "${{ inputs.ic_name }}" --arg stage "${{ inputs.build_stage_name }}" --arg prefix "${{ inputs.ic_name }}_gcc_project/" '.[$ic][$stage]' $JSON_FILE)
+        BUILD_CONFIG=$(
+          jq -r \
+            --arg ic "${{ inputs.ic_name }}" \
+            --arg stage "${{ inputs.build_stage_name }}" \
+            --arg prefix "${{ inputs.ic_name }}_gcc_project/" \
+            '
+            # 取到目标值
+            .[$ic][$stage]
+            # 如果是字符串，先包成数组；如果本来就是数组，保持不变
+            | (type == "string") ? [.] : .
+            # 给每个元素加前缀
+            | map($prefix + .)
+            # 用空格拼接为一行输出
+            | join(" ")
+            ' \
+            "$JSON_FILE"
+        )
         echo "build_config=$BUILD_CONFIG" >> $GITHUB_OUTPUT
         echo "SOC_NAME=${{ fromJson(env.SOC_MAP_JSON)[inputs.ic_name] }}" >> $GITHUB_ENV
 
