--- a/.github/workflows/ameba_cross_build_template.yml
+++ b/.github/workflows/ameba_cross_build_template.yml
@@ -82,13 +82,10 @@ jobs:
             --arg stage "${{ inputs.build_stage_name }}" \
             --arg prefix "${{ inputs.ic_name }}_gcc_project/" \
             '
-            # 取到目标值
             .[$ic][$stage]
-            # 如果是字符串，先包成数组；如果本来就是数组，保持不变
-            | (type == "string") ? [.] : .
-            # 给每个元素加前缀
+            | split(" ")
+            | map(select(length > 0))
             | map($prefix + .)
-            # 用空格拼接为一行输出
             | join(" ")
             ' \
             "$JSON_FILE"
