--- a/.github/workflows/sync_to_gitee.yml
+++ b/.github/workflows/sync_to_gitee.yml
@@ -16,18 +16,18 @@ jobs:
     - name: Debug GITEE_TOKEN
       run: echo "TOKEN_LENGTH=${#GITEE_TOKEN}"
       env:
-        GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
+        GITEE_TOKEN: ${{ secrets.TOKEN_GITEE }}
     - name: Mirror to Gitee
       env:
-        GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
+        GITEE_TOKEN: ${{ secrets.TOKEN_GITEE}}
       run: |
-        git remote add gitee https://gloria-chen:${GITEE_TOKEN}@gitee.com/ameba-aiot/ameba-rtos.git
+        git remote add gitee https://JenkinsRsWlan5:${GITEE_TOKEN}@gitee.com/ameba-aiot/ameba-rtos.git
         git push gitee HEAD:refs/heads/master --force
 
     - name: Push to Gitee only
       env:
           GITEE_TOKEN: ${{ secrets.GITEE_TOKEN }}
-      run: git clone https://gloria-chen:${GITEE_TOKEN}@gitee.com/ameba-aiot/ameba-rtos.git gitee_repo
+      run: git clone https://JenkinsRsWlan5:${GITEE_TOKEN}@gitee.com/ameba-aiot/ameba-rtos.git gitee_repo
     - name: Patch cmake if needed
       run: |
           cd gitee_repo
